@@ -93,7 +93,7 @@ public class TCMessageFactoryImpl implements TCMessageFactory {
           byte[].class, Integer.TYPE, Integer.TYPE });
       defineClass.setAccessible(true);
 
-      final Class c = (Class) defineClass.invoke(loader, new Object[] { className, clazz, new Integer(0),
+      final Class c = (Class) defineClass.invoke(loader, new Object[] { className, clazz, Integer.valueOf(0),
           new Integer(clazz.length) });
       return c;
     } catch (final Exception e) {
